Add more test coverage